remove unused css

--- a/Frontend/profile.html
+++ b/Frontend/profile.html
@@ -166,15 +166,15 @@
             </div>
             <div class="form-group">
                 <label for="last name">Last Name:</label>
-                <input type="text" id="last name" name="last name" value="Doe"> <!-- Default value for example -->
+                <input type="text" id="last name" name="last name" value="Smith"> <!-- Default value for example -->
             </div>
             <div class="form-group">
                 <label for="age">Age:</label>
-                <input type="text" id="age" name="age" value="30">
+                <input type="text" id="age" name="age" value="##">
             </div>
             <div class="form-group">
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" value="johnny">
+                <input type="text" id="username" name="username" value="username">
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
@@ -190,7 +190,7 @@
             </div>
             <div class="form-group">
                 <label for="medications">Medications:</label>
-                <input type="text" id="medications" name="medications">
+                <input type="text" id="medications" name="medications" value="None"> 
             </div>
             <button class="update-profile-btn" type="submit">Update Profile</button>
         </form>
